k8s/java-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-app
  namespace: java-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: java-app
  template:
    metadata:
      labels:
        app: java-app
    spec:
      containers:
        - name: java-app
          image: arulchinnappa12112004/java-app:v0.0.10
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
