k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-service
  namespace: java-app
spec:
  selector:
    app: java-app
  ports:
    - port: 80
      targetPort: 8080
