k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: java-app-service
  namespace: java-app
spec:
  selector:
    app: java-app
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080
  type: NodePort
